[package]
name = "rocket-sentry"
version = "0.7.0"
edition = "2018"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Simplifies integration between the Rocket web framework and Sentry application monitoring system."
homepage = "https://github.com/intgr/rocket-sentry"
repository = "https://github.com/intgr/rocket-sentry"
readme = "README.md"
keywords = ["rocket", "fairing", "sentry", "monitoring", "error-reporting"]
categories = ["web-programming", "development-tools"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.23"
rocket = { version = "0.4", default-features = false }
log = "0.4"
