[package]
name = "rocket-sentry"
version = "0.9.0"
edition = "2018"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Simplifies integration between the Rocket web framework and Sentry application monitoring system."
homepage = "https://github.com/intgr/rocket-sentry"
repository = "https://github.com/intgr/rocket-sentry"
readme = "README.md"
keywords = ["rocket", "fairing", "sentry", "monitoring", "error-reporting"]
categories = ["web-programming", "development-tools"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.25.0"
rocket = { version = "0.5.0-rc.1", default-features = false }
log = "0.4.14"
serde = "1.0.134"
figment = "0.10.6"
