[package]
name = "rocket-sentry"
version = "0.19.0"
edition = "2021"
rust-version = "1.73.0"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Simplifies integration between the Rocket web framework and Sentry application monitoring system."
homepage = "https://github.com/intgr/rocket-sentry"
repository = "https://github.com/intgr/rocket-sentry"
readme = "README.md"
keywords = ["rocket", "fairing", "sentry", "monitoring", "error-reporting"]
categories = ["web-programming", "development-tools"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.38.0"
rocket = { version = "0.5.0-rc.2", default-features = false }
log = "0.4.17"
serde = "1.0.137"
figment = "0.10.6"
