[package]
name = "example"
version = "0.1.0"
authors = ["Marti Raudsepp <marti@juffo.org>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket-sentry = { path = ".." }
